--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mohamedHusseinZ/bot-creation",
+  "homepage": "git@github.com:mohamedHusseinZ/Phase-2-Code-Challenge-Bot-Battlr-COMPULSORY-Week-2-Code-Challenge-.git",
   "name": "botcollection",
   "version": "0.1.0",
   "private": true,
